# ampersand

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  build_test.sh  config.sh  config_build.sh  debug.sh  image.img  image.img.bak  linker.ld  params.sh  test.c  test.sh  testi
common/: circular.cpp  circular.hpp  common.cpp  common.hpp  path.cpp  path.hpp  ptr.hpp  queue.hpp  rovec.hpp  thread.hpp  vec.hpp
iso/boot/grub/: grub.cfg
kernel/arch/: arch.hpp  exception.hpp  keyboard.hpp  thread.hpp
kernel/arch/common/: exception.cpp
kernel/arch/drv/: pci.hpp  vga.hpp
kernel/arch/i386/: Arch.cmake  crti.asm  crtn.asm
kernel/src/: common.cpp  common.h  logger.cpp  logger.hpp  main.cpp  test.cpp  test.hpp  thread.cpp  thread.hpp
kernel/src/boot/: boot.cpp  boot.hpp  multiboot2.cpp  multiboot2.hpp
kernel/src/data/: chain.hpp  circular.cpp  circular.hpp  path.cpp  path.hpp  ptr.hpp  queue.hpp  rovec.hpp  thread.hpp  vec.hpp
kernel/src/drv/: debugout.cpp  debugout.hpp  device.hpp  ide.cpp  ide.hpp  vga_text.cpp  vga_text.hpp  video.cpp  video.hpp
kernel/src/fd/: blkdev.cpp  blkdev.hpp  block_transfer.hpp  blockdev.cpp  blockdev.hpp  chrdev.cpp  chrdev.hpp  fd.cpp  fd.hpp  fifo.cpp  fifo.hpp  manager.cpp  manager.hpp
kernel/src/fs/: devfs.cpp  devfs.hpp  ext2.cpp  ext2.hpp  fs.hpp  fs_manager.cpp  fs_manager.hpp  virtualfs.cpp  virtualfs.hpp
kernel/src/mem/: heap.cpp  heap.hpp  manager.cpp  manager.hpp  memory.cpp  memory.hpp  paging.cpp  paging.hpp
kernel/src/proc/: credentials.cpp  credentials.hpp  elf.cpp  elf.hpp  error.hpp  manager.cpp  manager.hpp  memory.cpp  memory.hpp  process.cpp  process.hpp  syscall.cpp  thread.cpp  thread.hpp
kernel/src/stream/: stream.cpp  stream.hpp  terminal.cpp  terminal.hpp  terminal_stream.cpp  terminal_stream.hpp
programs/test/: build.sh  linker.ld  main.c  test
test/: heap.cpp  tests.cpp  tests.hpp
user/bash/: Build.cmake  main.cpp  prompt.cpp  prompt.hpp
user/libc/: Build.cmake
user/libc/include/: errno.h  fb.h  fcntl.h  limits.h  (+6 more)
user/terminal/: Build.cmake  ansi.cpp  ansi.hpp  keyboard.cpp  keyboard.hpp  keys.hpp  keys_be.hpp  main.cpp  terminal.cpp  terminal.hpp
user/test/: Build.cmake  main.c
(+38 files in other folders)
